{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 198,
  "lineage": "1012089e-c1e8-16f3-ec5b-c6236957ef80",
  "resources": [
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-proyecto",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:internet-gateway/igw-0352ff65432590de0",
            "id": "igw-0352ff65432590de0",
            "owner_id": "214952093188",
            "tags": {
              "Name": "igw-proyecto"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "igw-proyecto",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "vpc_id": "vpc-072625d6b32f944a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        }
      ]
    },
    {
      "module": "module.nacl",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:network-acl/acl-07a89173706c7b7bd",
            "default_network_acl_id": "acl-07a89173706c7b7bd",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-07a89173706c7b7bd",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "214952093188",
            "subnet_ids": [
              "subnet-02be0d517c75b1e65",
              "subnet-03fe925fc379ffef2",
              "subnet-07788fab7d3e7e163",
              "subnet-0b9020a8bd7ec4df8",
              "subnet-0e9bc319a96277c0e",
              "subnet-0f6da482f1bf9f4c7"
            ],
            "tags": {
              "Name": "proyecto-nacl"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "proyecto-nacl",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "vpc_id": "vpc-072625d6b32f944a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet.aws_subnet.private",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f30ee4737f7d4e3",
            "route_table_id": "rtb-073d71bd641bcd6c5",
            "subnet_id": "subnet-0e9bc319a96277c0e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.routetable.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fb3ad87a8b235ad",
            "route_table_id": "rtb-073d71bd641bcd6c5",
            "subnet_id": "subnet-0f6da482f1bf9f4c7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.routetable.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056256fb29355157f",
            "route_table_id": "rtb-073d71bd641bcd6c5",
            "subnet_id": "subnet-0b9020a8bd7ec4df8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.routetable.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000a938eaf3adbfb8",
            "route_table_id": "rtb-073d71bd641bcd6c5",
            "subnet_id": "subnet-07788fab7d3e7e163"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.routetable.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf821bd2cc5f5603",
            "route_table_id": "rtb-03c036f9a0b1e1a58",
            "subnet_id": "subnet-03fe925fc379ffef2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw-proyecto",
            "module.routetable.aws_route_table.public_route_table",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002234f8b8132f2e4",
            "route_table_id": "rtb-03c036f9a0b1e1a58",
            "subnet_id": "subnet-02be0d517c75b1e65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw-proyecto",
            "module.routetable.aws_route_table.public_route_table",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        }
      ]
    },
    {
      "module": "module.routetable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:route-table/rtb-073d71bd641bcd6c5",
            "id": "rtb-073d71bd641bcd6c5",
            "owner_id": "214952093188",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rtb-proyecto_private"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "rtb-proyecto_private",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "timeouts": null,
            "vpc_id": "vpc-072625d6b32f944a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        }
      ]
    },
    {
      "module": "module.routetable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:route-table/rtb-03c036f9a0b1e1a58",
            "id": "rtb-03c036f9a0b1e1a58",
            "owner_id": "214952093188",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0352ff65432590de0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtb-proyecto_public"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "rtb-proyecto_public",
              "Nube": "AWS",
              "Responsable": "Juan Perez"
            },
            "timeouts": null,
            "vpc_id": "vpc-072625d6b32f944a9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.igw-proyecto",
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "priv-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:subnet/subnet-0e9bc319a96277c0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "20.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9bc319a96277c0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214952093188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-1-us-west-2a",
              "Type": "private"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "priv-subnet-1-us-west-2a",
              "Nube": "AWS",
              "Responsable": "Juan Perez",
              "Type": "private"
            },
            "vpc_id": "vpc-072625d6b32f944a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        },
        {
          "index_key": "priv-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:subnet/subnet-0f6da482f1bf9f4c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "20.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f6da482f1bf9f4c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214952093188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-2-us-west-2a",
              "Type": "private"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "priv-subnet-2-us-west-2a",
              "Nube": "AWS",
              "Responsable": "Juan Perez",
              "Type": "private"
            },
            "vpc_id": "vpc-072625d6b32f944a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        },
        {
          "index_key": "priv-subnet-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:subnet/subnet-0b9020a8bd7ec4df8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "20.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b9020a8bd7ec4df8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214952093188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-3-us-west-2b",
              "Type": "private"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "priv-subnet-3-us-west-2b",
              "Nube": "AWS",
              "Responsable": "Juan Perez",
              "Type": "private"
            },
            "vpc_id": "vpc-072625d6b32f944a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        },
        {
          "index_key": "priv-subnet-4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:subnet/subnet-07788fab7d3e7e163",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "20.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07788fab7d3e7e163",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214952093188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "priv-subnet-4-us-west-2b",
              "Type": "private"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "priv-subnet-4-us-west-2b",
              "Nube": "AWS",
              "Responsable": "Juan Perez",
              "Type": "private"
            },
            "vpc_id": "vpc-072625d6b32f944a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub-subnet-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:subnet/subnet-03fe925fc379ffef2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "20.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03fe925fc379ffef2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214952093188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-1-us-west-2a",
              "Type": "public"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "pub-subnet-1-us-west-2a",
              "Nube": "AWS",
              "Responsable": "Juan Perez",
              "Type": "public"
            },
            "vpc_id": "vpc-072625d6b32f944a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        },
        {
          "index_key": "pub-subnet-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:subnet/subnet-02be0d517c75b1e65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "20.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02be0d517c75b1e65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214952093188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-subnet-2-us-west-2b",
              "Type": "public"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "pub-subnet-2-us-west-2b",
              "Nube": "AWS",
              "Responsable": "Juan Perez",
              "Type": "public"
            },
            "vpc_id": "vpc-072625d6b32f944a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc_proyecto_server"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_proyecto_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:214952093188:vpc/vpc-072625d6b32f944a9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.20.0.0/16",
            "default_network_acl_id": "acl-07a89173706c7b7bd",
            "default_route_table_id": "rtb-08e4c6f9658e8e182",
            "default_security_group_id": "sg-0d1878ee6faa2b05d",
            "dhcp_options_id": "dopt-b540e7cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072625d6b32f944a9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e4c6f9658e8e182",
            "owner_id": "214952093188",
            "tags": {
              "Name": "vpc_proyecto_server",
              "cidr": "20.20.0.0/16"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha_Creacion": "12/07/2025",
              "IaC": "Terraform",
              "Name": "vpc_proyecto_server",
              "Nube": "AWS",
              "Responsable": "Juan Perez",
              "cidr": "20.20.0.0/16"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}